--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
             <id>matsim-eth</id>
             <url>http://dl.bintray.com/matsim-eth/matsim</url>
         </repository>
+        <repository>
+            <id>matsim</id>
+            <name>MATSim release repository</name>
+            <url>http://dl.bintray.com/matsim/matsim</url>
+        </repository>
     </repositories>
 
     <profiles>
@@ -51,11 +56,16 @@
     </profiles>
 
 	<dependencies>
-		<dependency>
-			<groupId>org.matsim</groupId>
-			<artifactId>matsim</artifactId>
-			<version>${matsim.version}</version>
-		</dependency>
+        <dependency>
+            <groupId>org.matsim</groupId>
+            <artifactId>matsim</artifactId>
+            <version>0.10.1</version>
+        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>ch.ethz.matsim</groupId>-->
+            <!--<artifactId></artifactId>-->
+            <!--<version>${matsim.version}</version>-->
+        <!--</dependency>-->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
